...
                                        contentColor = colors.button.primaryContent,
                                        containerColor = colors.button.primaryBackground,
                                    ),
                                ) {
                                    Icon(
                                        imageVector = TablerIcons.Check,
                                        contentDescription = "Save",
                                    )
                                }

                                Spacer(modifier = Modifier.width(dimensions.mediumLarge))

                                DLLIconButton(
...
                    DLLIconButton(
                        onClick = { inEditMode = true },
                        modifier = Modifier.size(18.dp),
                    ) {
                        Icon(
                            imageVector = TablerIcons.Pencil,
                            contentDescription = "Edit",
                        )
                    }
                }
            }
        }
    }
...
