...
                        if (!isFocused) {
                            isFocused = it.isFocused
                        }
                    },
                value = value,
                onValueChange = onValueChange,
                label = "Type your deeplink here...",
                keyboardOptions = KeyboardOptions.Default.copy(
                    keyboardType = KeyboardType.Uri,
                    autoCorrectEnabled = false,
                    imeAction = ImeAction.Done,
                ),
                colors = defaultTextFieldColors.copy(
...
                modifier = Modifier.padding(start = 12.dp),
                onClick = launch,
                enabled = value.isNotBlank(),
            ) {
                Icon(
                    imageVector = TablerIcons.ExternalLink,
                    contentDescription = "Launch",
                )
            }
        }

        AnimatedVisibility(
            visible = errorMessage != null,
...
