...
            },
        )

        DLLHorizontalDivider()

        DLLListItem(
            title = "Suggestions",
            description = "Enable or disable deeplink suggestions when typing a deeplink",
            trailingContent = {
                ChevronIcon()
            },
        )
    }
...
