...
    var newLink by rememberSaveable { mutableStateOf(deepLink.link) }
    var copyAllFields by rememberSaveable { mutableStateOf(true) }

    Column {
        Column(modifier = Modifier.padding(horizontal = 24.dp, vertical = 8.dp)) {
            DLLTextField(
                label = "Enter new deeplink",
                value = newLink,
                onValueChange = { newLink = it },
                modifier = Modifier.clip(RoundedCornerShape(12.dp)),
                keyboardOptions = KeyboardOptions.Default.copy(
                    imeAction = ImeAction.Done,
                ),
...
