...
            Row(
                modifier = Modifier.fillMaxWidth(),
                verticalAlignment = Alignment.CenterVertically,
                horizontalArrangement = Arrangement.SpaceBetween,
            ) {
                Text(
                    text = "Copy all fields",
                    style = MaterialTheme.typography.bodyMedium
                )
                Switch(
                    checked = copyAllFieldsChecked,
                    onCheckedChange = { copyAllFieldsChecked = it }
                )
...
