...

@Preview(showBackground = true)
@Composable
fun DeepLinkItemPreview() {
    DeepLinkItem(deepLink = DeepLink(
        id = "123",
        link = "https://www.google.com",
        name = null,
        description = null,
        createdAt = 4849,
        isFavorite = false,
        folder = null
    ),
...
