...
            Spacer(modifier = Modifier.height(12.dp))

            Button(
                onClick = onDismiss,
                modifier = Modifier.padding(top = 12.dp).fillMaxWidth(.5f),
            ) {
                Text(text = "Got it!")
            }
        }
    }
}

